--- a/index.css
+++ b/index.css
@@ -1,11 +1,11 @@
 body
 {
 	background-color: #111;
+	cursor: default;
 }
 
 .title
 {
-	cursor: default;
 	-webkit-app-region: drag;
 	-webkit-user-select: none;
 	text-align: center;
@@ -13,3 +13,30 @@ body
 	color: #fff;
 	background-color: #333;
 }
+
+.bottomButton {
+	-moz-box-shadow:inset 0px 37px 0px -23px #e67a73;
+	-webkit-box-shadow:inset 0px 37px 0px -23px #e67a73;
+	box-shadow:inset 0px 37px 0px -23px #e67a73;
+	background-color:#db645c;
+	-moz-border-radius:16px;
+	-webkit-border-radius:16px;
+	border-radius:16px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family: "Futura", sans-serif;
+	font-size:15px;
+	font-weight:bold;
+	padding:10px 10px;
+	text-decoration:none;
+	text-shadow:0px 2px 2px #b23e35;
+}
+.bottomButton:hover {
+	background-color:#eb675e;
+}
+.bottomButton:active {
+	position:relative;
+	top:1px;
+}
+
