--- a/index.css
+++ b/index.css
@@ -2,12 +2,12 @@ body
 {
 	background-color: #111;
 	cursor: default;
+	-webkit-user-select: none;
 }
 
 .title
 {
 	-webkit-app-region: drag;
-	-webkit-user-select: none;
 	text-align: center;
 	font-family: "Futura", sans-serif;
 	color: #fff;
@@ -15,28 +15,29 @@ body
 }
 
 .bottomButton {
-	-moz-box-shadow:inset 0px 37px 0px -23px #e67a73;
-	-webkit-box-shadow:inset 0px 37px 0px -23px #e67a73;
-	box-shadow:inset 0px 37px 0px -23px #e67a73;
-	background-color:#db645c;
-	-moz-border-radius:16px;
-	-webkit-border-radius:16px;
-	border-radius:16px;
+	background-color:#44c767;
+	-moz-border-radius:10px;
+	-webkit-border-radius:10px;
+	border-radius:0px;
+	border:3px solid #18ab29;
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family: "Futura", sans-serif;
-	font-size:15px;
+	font-family:Verdana;
+	font-size:28px;
 	font-weight:bold;
-	padding:10px 10px;
+	padding:15px 15px;
 	text-decoration:none;
-	text-shadow:0px 2px 2px #b23e35;
+	position:fixed;
+	bottom:-11;
+	right:-11;
 }
+
 .bottomButton:hover {
-	background-color:#eb675e;
+	background-color:#5cbf2a;
 }
+
 .bottomButton:active {
-	position:relative;
-	top:1px;
+	background-color:#55d877;
 }
 
