--- a/index.css
+++ b/index.css
@@ -37,6 +37,13 @@ body
 	background-color: #888;
 	display: flex;
 	margin: 15px;
+
+	align-items: center;
+}
+
+#clocks div *
+{
+	margin: 5px;
 }
 
 .bottomButton
