--- a/pages/index.css
+++ b/pages/index.css
@@ -38,7 +38,6 @@ input[type=number]::-webkit-outer-spin-button
 	padding-bottom: 50px;
 	overflow-y: scroll;
 	height: 100%;
-	padding-left: 3%;	
 }
 
 #clocks div
@@ -47,6 +46,7 @@ input[type=number]::-webkit-outer-spin-button
 	width: 90%;
 	align-items: center;
 	justify-content: space-between;
+	margin-left: 5%;
 }
 
 #clocks div *
@@ -57,10 +57,6 @@ input[type=number]::-webkit-outer-spin-button
 .clockText
 {
 	text-align: center;
-}
-
-.clockSettingsButton
-{
 }
 
 #bottomGroup
