--- a/pages/index.css
+++ b/pages/index.css
@@ -47,6 +47,7 @@ input[type=number]::-webkit-outer-spin-button
 	align-items: center;
 	justify-content: space-between;
 	margin-left: 5%;
+	height: 88px;
 }
 
 #clocks div *
@@ -57,6 +58,11 @@ input[type=number]::-webkit-outer-spin-button
 .clockText
 {
 	text-align: center;
+}
+
+.clockSettings.ui.button, p.clockSettings
+{
+	display: none;
 }
 
 #bottomGroup
