--- a/pages/index.css
+++ b/pages/index.css
@@ -60,7 +60,7 @@ input[type=number]::-webkit-outer-spin-button
 	text-align: center;
 }
 
-.clockSettings.ui.button, p.clockSettings
+#clocks * .clockSettings
 {
 	display: none;
 }
