Added hours, minutes, seconds input with react state (#1)
Does not go into clocks themselves yet.

--- a/pages/index.css
+++ b/pages/index.css
@@ -83,3 +83,13 @@ input[type=number]::-webkit-outer-spin-button
 	left: 0;
 	width: 100%;
 }
+
+#bottomGroup .input
+{
+	width: 15%;
+}
+
+#bottomGroup .input input
+{
+	text-align: center;
+}
