--- a/pages/index.css
+++ b/pages/index.css
@@ -76,6 +76,11 @@ input[type=number]::-webkit-outer-spin-button
 	width: 25%;
 }
 
+#clocks .input.clockSettings input
+{
+	text-align: center;
+}
+
 #bottomGroup
 {
 	position: fixed;
